--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/node": "^20.7.1",
+    "@types/react": "^18.2.23",
+    "@types/react-dom": "^18.2.8",
     "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -44,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.68.0"
+    "sass": "^1.68.0",
+    "typescript": "^5.2.2"
   }
 }
