--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
     "axios": "^1.5.0",
+    "rc-pagination": "^3.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
@@ -21,6 +22,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
     "socket.io-client": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
